--- a/.github/workflows/post.yml
+++ b/.github/workflows/post.yml
@@ -1,15 +1,15 @@
-name: Tweet 3name IDs Daily
+name: Tweet 3-character IDs daily
 
 on:
   schedule:
-    - cron: '0 9 * * *'  # 日本時間18時に相当（UTC9時）
+    - cron: '0 9 * * *'  # 日本時間18時
   workflow_dispatch:
 
 jobs:
-  post_tweet:
+  tweet:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v4
 
       - name: Set up Python
@@ -18,7 +18,8 @@ jobs:
           python-version: '3.11'
 
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: |
+          pip install tweepy requests
 
       - name: Run script
         env:
