--- a/.github/workflows/post.yml
+++ b/.github/workflows/post.yml
@@ -22,7 +22,7 @@ jobs:
         pip install tweepy selenium requests
         sudo apt update
         sudo apt install -y chromium-browser chromium-chromedriver
-        sudo ln -s /usr/bin/chromium-browser /usr/bin/google-chrome
+        sudo ln -sf /usr/bin/chromium-browser /usr/bin/google-chrome
 
     - name: Run script
       env:
